environments/dev/examples/vault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-vault-server
  namespace: vault
spec:
  # tls:
  # - hosts:
  #   - homelab.com
  #   secretName: example-app-tls
  rules:
  - host: vault.homelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: vault
            port: 
              number: 8200
